--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,8 @@
 .jhw-cache
 
 /public/assets
+
+config/settings.local.yml
+config/settings/*.local.yml
+config/environments/*.local.yml
+config/settings.yml
